...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Server Address: "
            android:textSize="16sp" />

        <EditText
            android:id="@+id/ip_address_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="IPv4 Address"
            android:textSize="16sp" />
    </LinearLayout>
...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Sample Rate: "
            android:textSize="16sp" />

        <EditText
            android:id="@+id/sample_rate_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="# Milliseconds"
            android:inputType="number"
            android:textSize="16sp" />
...
